--- a/css/desktop.css
+++ b/css/desktop.css
@@ -9,6 +9,7 @@
   }
 
   .informacion {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +60,7 @@
     height: 100%;
     object-fit: cover;
     display: block;
+    aspect-ratio: 1/1;
   }
   .galeria img:nth-child(1) {
     grid-column: 1/4;
@@ -110,4 +112,16 @@
     background-color: white;
     color: var(--secondary-color);
   }
+
+ .lateral-details {
+  position: absolute;
+  top: 94%;
+  right: 94.5%;
+  transform: rotate(-90deg) translateY(-50%);
+  background-color: white;
+  color: black;
+  font-family: var(--font-title);
+  font-size: 1.3rem;
+  padding: 2px;
+} 
 }
